--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,8 +38,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v1
-#        with:
-#          java-version: '17'
+        with:
+          java-version: '17'
 #          distribution: 'temurin'
 #          cache: maven
       - name: Run Tests
