--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Checkout
       - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
