--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set Checkout
+      - name: Set Github Checkout
         uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -30,16 +30,16 @@ jobs:
       - name: Build with Maven
         run: mvn compile
 
-#  testar_projeto:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: action/checkout@v3
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#          cache: maven
-#      - name: Test Project
-#        run: mvn test
+  testar_projeto:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: action/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Test Project
+        run: mvn test
