--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,22 @@ jobs:
           cache: maven
       - name: Test Project
         run: mvn test
+
+  docker_build_and_push:
+    needs: testar_projeto
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build with Maven
+        run: mvn package
+
+      - name: Build and Push docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: userteste123/gui-video1
+          tags: latest
+          registry: docker.io
+          #          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
