--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,6 +67,6 @@ jobs:
           image: userteste123/gui-video1
           tags: latest
           registry: docker.io
-          #          dockerfile: Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
